stylesheet.less
/* ... */
.widget.socialicons {
	clear:both;
	min-height:30px;
}

.widget.image span img {
	width:100%;

}

hr.line {
	background-color: fade(@color-swatch5, 25%);
	height:1px;
}

button.btn,
.widget.feature .feature-bgimg .content button.btn,
.contactform button.btn {
	padding: 11px 14px;
}

.widget.clicktocall a {
	padding: 13px 14px 8px;
}

.blog-search-submit-button {
	padding:10px 14px 7px 14px;
	margin-left:10px;
}

.signupform fieldset button {
	padding:8px 16px 8px 16px;
	margin-left:5px;
}

.widget.profile form button {
	padding: 7px 14px 10px;
}

.widget.tweet a:hover {
	padding-bottom: 14px;
}

.widget.clicktocall a {
	border: 2px solid @color-swatch3;
	display: inline-block;
	margin-bottom: 1em;
	border-radius:3px;
	&:hover {
		border-color: lighten(@color-swatch3, 5%);
	}
}

/*
	TWITTER
*/

.widget.twitter ul li a,
.widget.twitter ul li span a {
	text-decoration: none;
	&:hover {
		text-decoration: none;
	}
}

.widget.twitter ul li {
	padding-bottom:0;
}

.twitter-profile-pic {
	a {
		border: 0;
	}
}
.twitter ul li time {
	font-size: inherit;
}

.widget.twitter .twitter-content span.bk-full-name {
    line-height:60px;
}

.twitter-content {
	padding-bottom: 10px;
	margin-bottom: 10px;
}

/*
	IMAGES
*/

/* ===============================
   FEATURE = gallery widget
   =============================== */


.widget.gallery ul {
	margin-bottom:20px;
	width:101%;
}

.widget.gallery ul li {
	padding-bottom:50%;
}

// -----------------------------
// Gallery
// -----------------------------

.widget.gallery {
    ul li {
        @media @tablet {
            width: 50%;
            padding-bottom: 50%;
        }
        @media @mobile {
            width: 100%;
            padding-bottom: 100%;
        }
        span.inner {
            .title,
            .description {
                // Font
                color: @color-swatch1;
                font-family: @font-swatch4-font-family;
                letter-spacing: @font-swatch4-letter-spacing;
                text-align: left;
            }
            .title {
                font-size: 19px;
                font-weight: 600;
                line-height: 26px;
            }
            .description {
                font-size: 16px;
                line-height: 20px;
            }
        }
    }
    // Image Data
    .image-data {
        display: block;
        opacity: 0;
        background-color: @color-swatch3;
        -webkit-transition: all 0.4s ease-out;
        -moz-transition: all 0.4s ease-out;
        -o-transition: all 0.4s ease-out;
        transition: all 0.4s ease-out;
        &:hover {
            opacity: 1;
        }
    }
}

/*
	MENU
*/
.dietary-icon,
.menu .menu-section-item-dietary-props .dietary-icon,
.menu .menu-info .dietary-icon {
	border-radius: 3px;
	font-size: bkscale(@font-swatch5-font-size, 0.9);
	margin-top: 1em;
	padding: 1px 8px;
	color: @font-swatch4-color;
	font-weight:400;
	border:1px dashed @color-swatch5;
}

.menu-item-nutritional-title {
	font-weight: @font-swatch5-font-weight;
}

.menu-name-background {
	margin-bottom:10px;
}

.main .menu-items .inner-item {
	text-align:center;
}

.widget.menu .main {
    width:100%;
}

.menu .menu-subsection li {
	border-radius:5px;
}

.main .menu-items .menu-item {
	border-radius:5px;
}

/*	===============================
	Globals
	=============================== */

::-moz-selection { background-color: fade(@color-swatch3, 85%); }
::selection { background-color: fade(@color-swatch3, 85%); }

body {
	background-color: @color-swatch1;
	background-size: 100% auto;
	background-attachment: fixed;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	background-repeat:no-repeat;
	background-size:cover;
}

.wrapper {
	max-width: 1200px;
	margin: 0 auto;
}

.page-wrap {
	max-width: 1200px;
	margin: 0 auto;
	padding: 0 5%;
	background-color:@color-swatch7;
}

.feature-section {
	margin-bottom:10px;
}

.canvas {
	background-color: darken(@color-swatch1,3%);
	width:100%;
}

.bk-pt-default header.bk-header {
	padding: 50px 0 30px;
	border-bottom: 1px solid lighten(@color-swatch5,30%);
}

.bk-pt-default .canvas {
	background-color:@color-swatch7;
	padding-top: 20px;
}

.main.menu-page {
	padding: 0 8%;
}

.companyname {
	float: right;
	@media @mobile {
		width: 90%;
	}
	a {
		float: right;
		margin-right:5px;
		@media @mobile {
			float: none;
			margin-right: 0;
		}
	}
}

.widget.companyname a {
	font-size: @font-swatch10-font-size;
	font-weight:@font-swatch10-font-weight;
	float:right;
}

.main {
	padding: 1em 0em;
	clear: both;
	text-align:left;
	background-color:@color-swatch7;
	.menu-items {
		column-count: 3;
        column-gap: 80px;
        -moz-column-count: 3;
        -moz-column-gap: 80px; 
        -webkit-column-count: 3;
        -webkit-column-gap: 80px;
		.menu-item {
			padding: 1px 20px 45px;
		}
		li {
			break-inside: avoid;
	        -webkit-column-break-inside: avoid;
	        -moz-column-break-inside: avoid;
	        -ms-column-break-inside: avoid;
	        -o-column-break-inside: avoid;
	        page-break-inside: avoid;
			padding: 1em 1em !important;
		}
		.inner-item {
			.clearfix;
		}
	}
	.menu-subsection {
		list-style: none;
		text-align: center;
		border: 3px solid @color-swatch3;
		h2 {
			color: @color-swatch4;
			font-size: @font-swatch4-font-size;
		}
		.menu-subsection-header {
			margin-bottom: 1em;
			h2 {
				margin-top: 1em;
				line-height: @font-swatch4-line-height;
			}
		}
	}
	.menu-section-header {
		list-style: none;
		clear: both;
		padding: 1em;
		margin-bottom: 1em;
	}
	.menu-item img {
		margin-left: 1em;
		padding: 2px;
		display: none;
	}
	.menu-item-price p {
		color: @color-swatch5;
		font-family: @font-swatch5-font-family;
		font-size: bkscale(@font-swatch5-font-size, 1.1);
	}
	.menu-item-image-wrap{
		width: 100%;
		height: 200px;
		margin-bottom: 10px;
		background-size: cover;
		background-position: center center;
		padding: 2px;
	}
}
/* ... */

